analisador-lexico-uni1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> tipo_classe_primaria programa
Rule 2     programa -> tipo_classe_primaria
Rule 3     tipo_classe_primaria -> declaracao_classe_definida
Rule 4     tipo_classe_primaria -> declaracao_classe_primitiva
Rule 5     tipo_classe_secundaria -> declaracao_classe_aninhada
Rule 6     tipo_classe_secundaria -> declaracao_classe_enumerada
Rule 7     tipo_classe_secundaria -> declaracao_classe_coberta
Rule 8     tipo_classe_secundaria -> declaracao_classe_axioma_fechamento
Rule 9     declaracao_classe_primitiva -> PALAVRA_RESERVADA CLASSE caso_subclassof caso_disjoint_opcional caso_individuals_opcional
Rule 10    caso_subclassof -> SUBCLASSOF PROPRIEDADE SOME CLASSE
Rule 11    caso_subclassof -> SUBCLASSOF PROPRIEDADE SOME NAMESPACE TIPO
Rule 12    caso_subclassof -> SUBCLASSOF PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
Rule 13    caso_subclassof -> SUBCLASSOF PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
Rule 14    caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento
Rule 15    caso_individuals_opcional -> NOME_INDIVIDUO CARACTERE_ESPECIAL caso_individuals_opcional
Rule 16    caso_individuals_opcional -> NOME_INDIVIDUO
Rule 17    caso_individuals_opcional -> INDIVIDUALS NOME_INDIVIDUO
Rule 18    caso_individuals_opcional -> INDIVIDUALS NOME_INDIVIDUO CARACTERE_ESPECIAL caso_individuals_opcional
Rule 19    caso_individuals_opcional -> <empty>
Rule 20    caso_disjoint_opcional -> CLASSE CARACTERE_ESPECIAL caso_disjoint_opcional
Rule 21    caso_disjoint_opcional -> CLASSE
Rule 22    caso_disjoint_opcional -> DISJOINTCLASSES CLASSE
Rule 23    caso_disjoint_opcional -> DISJOINTCLASSES CLASSE CARACTERE_ESPECIAL caso_disjoint_opcional
Rule 24    caso_disjoint_opcional -> <empty>
Rule 25    continuacao_subclassof -> PROPRIEDADE SOME CLASSE
Rule 26    continuacao_subclassof -> PROPRIEDADE SOME NAMESPACE TIPO
Rule 27    continuacao_subclassof -> PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
Rule 28    continuacao_subclassof -> PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
Rule 29    declaracao_classe_definida -> PALAVRA_RESERVADA CLASSE EQUIVALENT_TO caso_simples_opcional estrutura_definida
Rule 30    estrutura_definida -> caso_individuals_opcional estrutura_definida
Rule 31    estrutura_definida -> tipo_classe_secundaria estrutura_definida
Rule 32    estrutura_definida -> <empty>
Rule 33    caso_simples_opcional -> CLASSE caso_ands
Rule 34    caso_simples_opcional -> <empty>
Rule 35    declaracao_classe_aninhada -> caso_ands
Rule 36    caso_ands -> AND restricoes_aninhada caso_ands
Rule 37    caso_ands -> AND restricoes_aninhada
Rule 38    restricoes_aninhada -> ABRE_PARENT PROPRIEDADE SOME CLASSE FECHA_PARENT
Rule 39    restricoes_aninhada -> ABRE_PARENT PROPRIEDADE PALAVRA_RESERVADA CLASSE FECHA_PARENT
Rule 40    restricoes_aninhada -> ABRE_PARENT PROPRIEDADE SOME ABRE_PARENT classes_and FECHA_PARENT
Rule 41    restricoes_aninhada -> ABRE_PARENT PROPRIEDADE SOME restricoes_aninhada FECHA_PARENT
Rule 42    restricoes_aninhada -> ABRE_PARENT PROPRIEDADE SOME CARDINALIDADE CLASSE FECHA_PARENT restricoes_aninhada
Rule 43    restricoes_aninhada -> ABRE_PARENT PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL OPERADORES CARDINALIDADE CARACTERE_ESPECIAL FECHA_PARENT
Rule 44    restricoes_aninhada -> ABRE_PARENT PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL OPERADORES CARDINALIDADE CARACTERE_ESPECIAL FECHA_PARENT CARACTERE_ESPECIAL restricoes_aninhada
Rule 45    restricoes_aninhada -> ABRE_PARENT restricoes_aninhada FECHA_PARENT
Rule 46    classes_and -> CLASSE AND classes_and
Rule 47    classes_and -> CLASSE
Rule 48    declaracao_classe_axioma_fechamento -> CLASSE CARACTERE_ESPECIAL restricoes_axioma_fechamento
Rule 49    restricoes_axioma_fechamento -> PROPRIEDADE ONLY ABRE_PARENT classes_or FECHA_PARENT
Rule 50    restricoes_axioma_fechamento -> PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL restricoes_axioma_fechamento
Rule 51    classes_or -> CLASSE OR classes_or
Rule 52    classes_or -> CLASSE
Rule 53    declaracao_classe_enumerada -> ABRE_CHAVE classes_enumeradas FECHA_CHAVE
Rule 54    classes_enumeradas -> CLASSE CARACTERE_ESPECIAL classes_enumeradas
Rule 55    classes_enumeradas -> CLASSE
Rule 56    declaracao_classe_coberta -> classes_or

Terminals, with rules where they appear

ABRE_CHAVE           : 53
ABRE_PARENT          : 38 39 40 40 41 42 43 44 45 49
AND                  : 36 37 46
CARACTERE_ESPECIAL   : 12 13 15 18 20 23 27 28 43 43 44 44 44 48 50 54
CARDINALIDADE        : 42 43 44
CLASSE               : 9 10 12 20 21 22 23 25 27 29 33 38 39 42 46 47 48 50 51 52 54 55
DISJOINTCLASSES      : 22 23
EQUIVALENT_TO        : 29
FECHA_CHAVE          : 53
FECHA_PARENT         : 38 39 40 41 42 43 44 45 49
INDIVIDUALS          : 17 18
NAMESPACE            : 11 13 26 28 43 44
NOME_INDIVIDUO       : 15 16 17 18
ONLY                 : 49
OPERADORES           : 43 44
OR                   : 51
PALAVRA_RESERVADA    : 9 29 39
PROPRIEDADE          : 10 11 12 13 25 26 27 28 38 39 40 41 42 43 44 49 50
SOME                 : 10 11 12 13 25 26 27 28 38 40 41 42 43 44 50
SUBCLASSOF           : 10 11 12 13 14
TIPO                 : 11 13 26 28 43 44
error                : 

Nonterminals, with rules where they appear

caso_ands            : 33 35 36
caso_disjoint_opcional : 9 20 23
caso_individuals_opcional : 9 15 18 30
caso_simples_opcional : 29
caso_subclassof      : 9
classes_and          : 40 46
classes_enumeradas   : 53 54
classes_or           : 49 51 56
continuacao_subclassof : 12 13 27 28
declaracao_classe_aninhada : 5
declaracao_classe_axioma_fechamento : 8 14
declaracao_classe_coberta : 7
declaracao_classe_definida : 3
declaracao_classe_enumerada : 6
declaracao_classe_primitiva : 4
estrutura_definida   : 29 30 31
programa             : 1 0
restricoes_aninhada  : 36 37 41 42 44 45
restricoes_axioma_fechamento : 48 50
tipo_classe_primaria : 1 2
tipo_classe_secundaria : 31

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . tipo_classe_primaria programa
    (2) programa -> . tipo_classe_primaria
    (3) tipo_classe_primaria -> . declaracao_classe_definida
    (4) tipo_classe_primaria -> . declaracao_classe_primitiva
    (29) declaracao_classe_definida -> . PALAVRA_RESERVADA CLASSE EQUIVALENT_TO caso_simples_opcional estrutura_definida
    (9) declaracao_classe_primitiva -> . PALAVRA_RESERVADA CLASSE caso_subclassof caso_disjoint_opcional caso_individuals_opcional

    PALAVRA_RESERVADA shift and go to state 5

    programa                       shift and go to state 1
    tipo_classe_primaria           shift and go to state 2
    declaracao_classe_definida     shift and go to state 3
    declaracao_classe_primitiva    shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> tipo_classe_primaria . programa
    (2) programa -> tipo_classe_primaria .
    (1) programa -> . tipo_classe_primaria programa
    (2) programa -> . tipo_classe_primaria
    (3) tipo_classe_primaria -> . declaracao_classe_definida
    (4) tipo_classe_primaria -> . declaracao_classe_primitiva
    (29) declaracao_classe_definida -> . PALAVRA_RESERVADA CLASSE EQUIVALENT_TO caso_simples_opcional estrutura_definida
    (9) declaracao_classe_primitiva -> . PALAVRA_RESERVADA CLASSE caso_subclassof caso_disjoint_opcional caso_individuals_opcional

    $end            reduce using rule 2 (programa -> tipo_classe_primaria .)
    PALAVRA_RESERVADA shift and go to state 5

    tipo_classe_primaria           shift and go to state 2
    programa                       shift and go to state 6
    declaracao_classe_definida     shift and go to state 3
    declaracao_classe_primitiva    shift and go to state 4

state 3

    (3) tipo_classe_primaria -> declaracao_classe_definida .

    PALAVRA_RESERVADA reduce using rule 3 (tipo_classe_primaria -> declaracao_classe_definida .)
    $end            reduce using rule 3 (tipo_classe_primaria -> declaracao_classe_definida .)


state 4

    (4) tipo_classe_primaria -> declaracao_classe_primitiva .

    PALAVRA_RESERVADA reduce using rule 4 (tipo_classe_primaria -> declaracao_classe_primitiva .)
    $end            reduce using rule 4 (tipo_classe_primaria -> declaracao_classe_primitiva .)


state 5

    (29) declaracao_classe_definida -> PALAVRA_RESERVADA . CLASSE EQUIVALENT_TO caso_simples_opcional estrutura_definida
    (9) declaracao_classe_primitiva -> PALAVRA_RESERVADA . CLASSE caso_subclassof caso_disjoint_opcional caso_individuals_opcional

    CLASSE          shift and go to state 7


state 6

    (1) programa -> tipo_classe_primaria programa .

    $end            reduce using rule 1 (programa -> tipo_classe_primaria programa .)


state 7

    (29) declaracao_classe_definida -> PALAVRA_RESERVADA CLASSE . EQUIVALENT_TO caso_simples_opcional estrutura_definida
    (9) declaracao_classe_primitiva -> PALAVRA_RESERVADA CLASSE . caso_subclassof caso_disjoint_opcional caso_individuals_opcional
    (10) caso_subclassof -> . SUBCLASSOF PROPRIEDADE SOME CLASSE
    (11) caso_subclassof -> . SUBCLASSOF PROPRIEDADE SOME NAMESPACE TIPO
    (12) caso_subclassof -> . SUBCLASSOF PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
    (13) caso_subclassof -> . SUBCLASSOF PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
    (14) caso_subclassof -> . SUBCLASSOF declaracao_classe_axioma_fechamento

    EQUIVALENT_TO   shift and go to state 8
    SUBCLASSOF      shift and go to state 10

    caso_subclassof                shift and go to state 9

state 8

    (29) declaracao_classe_definida -> PALAVRA_RESERVADA CLASSE EQUIVALENT_TO . caso_simples_opcional estrutura_definida
    (33) caso_simples_opcional -> . CLASSE caso_ands
    (34) caso_simples_opcional -> .

  ! shift/reduce conflict for CLASSE resolved as shift
    CLASSE          shift and go to state 11
    NOME_INDIVIDUO  reduce using rule 34 (caso_simples_opcional -> .)
    INDIVIDUALS     reduce using rule 34 (caso_simples_opcional -> .)
    ABRE_CHAVE      reduce using rule 34 (caso_simples_opcional -> .)
    AND             reduce using rule 34 (caso_simples_opcional -> .)
    PALAVRA_RESERVADA reduce using rule 34 (caso_simples_opcional -> .)
    $end            reduce using rule 34 (caso_simples_opcional -> .)

  ! CLASSE          [ reduce using rule 34 (caso_simples_opcional -> .) ]

    caso_simples_opcional          shift and go to state 12

state 9

    (9) declaracao_classe_primitiva -> PALAVRA_RESERVADA CLASSE caso_subclassof . caso_disjoint_opcional caso_individuals_opcional
    (20) caso_disjoint_opcional -> . CLASSE CARACTERE_ESPECIAL caso_disjoint_opcional
    (21) caso_disjoint_opcional -> . CLASSE
    (22) caso_disjoint_opcional -> . DISJOINTCLASSES CLASSE
    (23) caso_disjoint_opcional -> . DISJOINTCLASSES CLASSE CARACTERE_ESPECIAL caso_disjoint_opcional
    (24) caso_disjoint_opcional -> .

    CLASSE          shift and go to state 13
    DISJOINTCLASSES shift and go to state 15
    NOME_INDIVIDUO  reduce using rule 24 (caso_disjoint_opcional -> .)
    INDIVIDUALS     reduce using rule 24 (caso_disjoint_opcional -> .)
    PALAVRA_RESERVADA reduce using rule 24 (caso_disjoint_opcional -> .)
    $end            reduce using rule 24 (caso_disjoint_opcional -> .)

    caso_disjoint_opcional         shift and go to state 14

state 10

    (10) caso_subclassof -> SUBCLASSOF . PROPRIEDADE SOME CLASSE
    (11) caso_subclassof -> SUBCLASSOF . PROPRIEDADE SOME NAMESPACE TIPO
    (12) caso_subclassof -> SUBCLASSOF . PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
    (13) caso_subclassof -> SUBCLASSOF . PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
    (14) caso_subclassof -> SUBCLASSOF . declaracao_classe_axioma_fechamento
    (48) declaracao_classe_axioma_fechamento -> . CLASSE CARACTERE_ESPECIAL restricoes_axioma_fechamento

    PROPRIEDADE     shift and go to state 16
    CLASSE          shift and go to state 17

    declaracao_classe_axioma_fechamento shift and go to state 18

state 11

    (33) caso_simples_opcional -> CLASSE . caso_ands
    (36) caso_ands -> . AND restricoes_aninhada caso_ands
    (37) caso_ands -> . AND restricoes_aninhada

    AND             shift and go to state 20

    caso_ands                      shift and go to state 19

state 12

    (29) declaracao_classe_definida -> PALAVRA_RESERVADA CLASSE EQUIVALENT_TO caso_simples_opcional . estrutura_definida
    (30) estrutura_definida -> . caso_individuals_opcional estrutura_definida
    (31) estrutura_definida -> . tipo_classe_secundaria estrutura_definida
    (32) estrutura_definida -> .
    (15) caso_individuals_opcional -> . NOME_INDIVIDUO CARACTERE_ESPECIAL caso_individuals_opcional
    (16) caso_individuals_opcional -> . NOME_INDIVIDUO
    (17) caso_individuals_opcional -> . INDIVIDUALS NOME_INDIVIDUO
    (18) caso_individuals_opcional -> . INDIVIDUALS NOME_INDIVIDUO CARACTERE_ESPECIAL caso_individuals_opcional
    (19) caso_individuals_opcional -> .
    (5) tipo_classe_secundaria -> . declaracao_classe_aninhada
    (6) tipo_classe_secundaria -> . declaracao_classe_enumerada
    (7) tipo_classe_secundaria -> . declaracao_classe_coberta
    (8) tipo_classe_secundaria -> . declaracao_classe_axioma_fechamento
    (35) declaracao_classe_aninhada -> . caso_ands
    (53) declaracao_classe_enumerada -> . ABRE_CHAVE classes_enumeradas FECHA_CHAVE
    (56) declaracao_classe_coberta -> . classes_or
    (48) declaracao_classe_axioma_fechamento -> . CLASSE CARACTERE_ESPECIAL restricoes_axioma_fechamento
    (36) caso_ands -> . AND restricoes_aninhada caso_ands
    (37) caso_ands -> . AND restricoes_aninhada
    (51) classes_or -> . CLASSE OR classes_or
    (52) classes_or -> . CLASSE

  ! shift/reduce conflict for NOME_INDIVIDUO resolved as shift
  ! shift/reduce conflict for INDIVIDUALS resolved as shift
  ! reduce/reduce conflict for PALAVRA_RESERVADA resolved using rule 19 (caso_individuals_opcional -> .)
  ! reduce/reduce conflict for $end resolved using rule 19 (caso_individuals_opcional -> .)
  ! shift/reduce conflict for ABRE_CHAVE resolved as shift
  ! shift/reduce conflict for CLASSE resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    NOME_INDIVIDUO  shift and go to state 25
    INDIVIDUALS     shift and go to state 26
    PALAVRA_RESERVADA reduce using rule 19 (caso_individuals_opcional -> .)
    $end            reduce using rule 19 (caso_individuals_opcional -> .)
    ABRE_CHAVE      shift and go to state 32
    CLASSE          shift and go to state 21
    AND             shift and go to state 20

  ! PALAVRA_RESERVADA [ reduce using rule 32 (estrutura_definida -> .) ]
  ! $end            [ reduce using rule 32 (estrutura_definida -> .) ]
  ! NOME_INDIVIDUO  [ reduce using rule 19 (caso_individuals_opcional -> .) ]
  ! INDIVIDUALS     [ reduce using rule 19 (caso_individuals_opcional -> .) ]
  ! ABRE_CHAVE      [ reduce using rule 19 (caso_individuals_opcional -> .) ]
  ! CLASSE          [ reduce using rule 19 (caso_individuals_opcional -> .) ]
  ! AND             [ reduce using rule 19 (caso_individuals_opcional -> .) ]

    estrutura_definida             shift and go to state 22
    caso_individuals_opcional      shift and go to state 23
    tipo_classe_secundaria         shift and go to state 24
    declaracao_classe_aninhada     shift and go to state 27
    declaracao_classe_enumerada    shift and go to state 28
    declaracao_classe_coberta      shift and go to state 29
    declaracao_classe_axioma_fechamento shift and go to state 30
    caso_ands                      shift and go to state 31
    classes_or                     shift and go to state 33

state 13

    (20) caso_disjoint_opcional -> CLASSE . CARACTERE_ESPECIAL caso_disjoint_opcional
    (21) caso_disjoint_opcional -> CLASSE .

    CARACTERE_ESPECIAL shift and go to state 34
    NOME_INDIVIDUO  reduce using rule 21 (caso_disjoint_opcional -> CLASSE .)
    INDIVIDUALS     reduce using rule 21 (caso_disjoint_opcional -> CLASSE .)
    PALAVRA_RESERVADA reduce using rule 21 (caso_disjoint_opcional -> CLASSE .)
    $end            reduce using rule 21 (caso_disjoint_opcional -> CLASSE .)


state 14

    (9) declaracao_classe_primitiva -> PALAVRA_RESERVADA CLASSE caso_subclassof caso_disjoint_opcional . caso_individuals_opcional
    (15) caso_individuals_opcional -> . NOME_INDIVIDUO CARACTERE_ESPECIAL caso_individuals_opcional
    (16) caso_individuals_opcional -> . NOME_INDIVIDUO
    (17) caso_individuals_opcional -> . INDIVIDUALS NOME_INDIVIDUO
    (18) caso_individuals_opcional -> . INDIVIDUALS NOME_INDIVIDUO CARACTERE_ESPECIAL caso_individuals_opcional
    (19) caso_individuals_opcional -> .

    NOME_INDIVIDUO  shift and go to state 25
    INDIVIDUALS     shift and go to state 26
    PALAVRA_RESERVADA reduce using rule 19 (caso_individuals_opcional -> .)
    $end            reduce using rule 19 (caso_individuals_opcional -> .)

    caso_individuals_opcional      shift and go to state 35

state 15

    (22) caso_disjoint_opcional -> DISJOINTCLASSES . CLASSE
    (23) caso_disjoint_opcional -> DISJOINTCLASSES . CLASSE CARACTERE_ESPECIAL caso_disjoint_opcional

    CLASSE          shift and go to state 36


state 16

    (10) caso_subclassof -> SUBCLASSOF PROPRIEDADE . SOME CLASSE
    (11) caso_subclassof -> SUBCLASSOF PROPRIEDADE . SOME NAMESPACE TIPO
    (12) caso_subclassof -> SUBCLASSOF PROPRIEDADE . SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
    (13) caso_subclassof -> SUBCLASSOF PROPRIEDADE . SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof

    SOME            shift and go to state 37


state 17

    (48) declaracao_classe_axioma_fechamento -> CLASSE . CARACTERE_ESPECIAL restricoes_axioma_fechamento

    CARACTERE_ESPECIAL shift and go to state 38


state 18

    (14) caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento .

    CLASSE          reduce using rule 14 (caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento .)
    DISJOINTCLASSES reduce using rule 14 (caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento .)
    NOME_INDIVIDUO  reduce using rule 14 (caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento .)
    INDIVIDUALS     reduce using rule 14 (caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento .)
    PALAVRA_RESERVADA reduce using rule 14 (caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento .)
    $end            reduce using rule 14 (caso_subclassof -> SUBCLASSOF declaracao_classe_axioma_fechamento .)


state 19

    (33) caso_simples_opcional -> CLASSE caso_ands .

    NOME_INDIVIDUO  reduce using rule 33 (caso_simples_opcional -> CLASSE caso_ands .)
    INDIVIDUALS     reduce using rule 33 (caso_simples_opcional -> CLASSE caso_ands .)
    ABRE_CHAVE      reduce using rule 33 (caso_simples_opcional -> CLASSE caso_ands .)
    CLASSE          reduce using rule 33 (caso_simples_opcional -> CLASSE caso_ands .)
    AND             reduce using rule 33 (caso_simples_opcional -> CLASSE caso_ands .)
    PALAVRA_RESERVADA reduce using rule 33 (caso_simples_opcional -> CLASSE caso_ands .)
    $end            reduce using rule 33 (caso_simples_opcional -> CLASSE caso_ands .)


state 20
